tests/neg/toplevel-overload/defs_1.scala
trait A

def f(x: A) = s"A"
